plugins {
    id 'java'
    id 'org.jetbrains.kotlin.jvm' version '1.5.30'
    id 'org.jetbrains.intellij' version '1.1.6'
}

group 'org.jetbrains.research'
version '1.0-SNAPSHOT'
compileJava {
    sourceCompatibility = '14'
    targetCompatibility = '14'
}

repositories {
    mavenCentral()
    mavenLocal()
}

dependencies {
    implementation 'org.jetbrains.kotlin:kotlin-stdlib'
    implementation 'org.antlr:antlr4-intellij-adaptor:0.1'
    implementation 'com.jetbrains.research:libsl:1.0.0'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
}

test {
    useJUnitPlatform()
}

intellij {
    version='2021.1.3'
}

runIde {
    jvmArgs '--add-exports', 'java.base/jdk.internal.vm=ALL-UNNAMED'
}
